--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,8 @@ dependencies {
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.8'
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    //testCompile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+
 }
